[tool.poetry]
name = "asgi-logger"
version = "0.1.0"
description = "Middleware based uvicorn access logger! :tada:"
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/asgi-logger"
include = ["asgi_logger/py.typed"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "^3.4.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.9b0"
flake8 = "^3.9.0"
isort = "^5.12"
pre-commit = "^2.9.3"
pytest = "^6.2"
pytest-cov = "^2.10.1"
mypy = "^0.910"
uvicorn = "^0.15.0"
httpx = "^0.20.0"
anyio = "^3.3.4"
trio = "^0.19.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
